Fix: note creation modal overflow with too many tags

--- a/src/components/modals/notes/creations/CreateNoteModal.module.css
+++ b/src/components/modals/notes/creations/CreateNoteModal.module.css
@@ -13,6 +13,7 @@
   width: 430px;
   border: 1px solid rgb(42, 36, 51);
   background-color: rgb(30, 25, 37);
+  overflow-y: auto;
   border-radius: 10px;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
   animation: smoothToggleModal 300ms cubic-bezier(0.25, 0.1, 0.25, 1.5) forwards;
